<resources>
    <string name="app_name">AndroidJava</string>
    <string name="clientForm_SecondName">Фамилия</string>
    <string name="clientForm_FirstName">Имя</string>
    <string name="clientForm_LastName">Отчество</string>
    <string name="clientForm_Email">Электронная почта</string>
    <string name="clientForm_Phone">Телефон</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>